    OAR automatically set the HT thread siblings if not set in the resources
    hierarchy with a thread resource, or in the resource cpuset field
  - [oarsh] add support to let oarsh create a sub cgroup with either a subset of
    the cpuset or of the devices in the shell opened on the node. See an
    example of usage with GNU Parallel in the website documentation.

version 2.5.8:
--------------

  - [job_resource_manager] manage nvidia gpu with the cgroup devices
  - [oarwalltime] add functionality to allow changing the walltime of a
    running job. See the oarwalltime command and oar.conf
  - [scheduler] fix the besteffort + deploy VS adv. reservation case
  - [scheduler] add the state=permissive job type, allowing jobs to be scheduled
    and run (if noop or cosystem as well only) regardless of the aliveness of 
    resources
  - [oarsub/scheduler] fix warning "Use of uninitialized value $resource_value"
  - [oarsub] fix unknown error message in case of job termination + typos
  - [oarnodesetting] do not kill noop jobs using by resources changed to
    Dead or Absent
  - [finaud] fix: make pingchecker run only on resources of type default
  - [oar-database] fix the privilegies of oar's read only user in PostgreSQL
    in new installation. For existing database, the following command apply the
    fix: `oar-database --fix-ro-user-priv ...`
  - [api] some improvement in the Apache configuration and tests
  - [api] added POST /media/force to overwrite a file
  - [finaud] bugfix: make pingchecker run only on resources of type default
  - [api] hardening on the syntax of the URIs (should not impact good URIs!)
  - [drawgantt-svg] add a mark next to the label of the resources pointed by
    the mouse
  - [drawgantt-svg] fix possible SQL injection with the filters
  - [drawgantt-svg] improve the label_display_regex text replacement mechanism
  - [drawgantt-svg/oarstat] fix past and current moldable jobs display
  - [drawgantt-svg] fix drain display